Trace error position